--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -37,40 +37,55 @@
 		?>
     </head>
     <body>
-        <nav class="navbar navbar-inverse" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath($themePath.$oTwitterBootstrap->AppLogo()) ?>" alt="<?php echo $oTwitterBootstrap->AppTitle(); ?>" />&nbsp;<?php echo $this->translate($oTwitterBootstrap->AppTitle()) ?></a>
-                </div>
-				<div class="collapse navbar-collapse">
+    
+        <nav role="navigation">
+        
+			<div class="title-bar" data-responsive-toggle="realEstateMenu" data-hide-for="small">
+				<button class="menu-icon" type="button" data-toggle></button>
+				<div class="title-bar-title">Menu</div>
+				<a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath($themePath.$oTwitterBootstrap->AppLogo()) ?>" alt="<?php echo $oTwitterBootstrap->AppTitle(); ?>" />&nbsp;<?php echo $this->translate($oTwitterBootstrap->AppTitle()) ?></a>
+			</div>
+			<div class="top-bar" id="realEstateMenu">
+				<div class="top-bar-left">
 					<?php
 						//$oTwitterBootstrap = $this->bootstrap();
 						//$oBootstrapComponents = $oTwitterBootstrap->Components();
 						$oNavBar = $oTwitterBootstrap->Navbar('navigation')
-							->setUlClass('nav navbar-nav')
+							->setUlClass('menu')
+							->setSubUlClass('submenu menu')
+							->setSubUlClassLevel1('submenu menu')
+							->setDefaultLiClass('')
+							->setSubLiClass('has-submenu')
+							->setSubLiClassLevel0('')
 							->setMinDepth(0)
 							->setMaxDepth(3)
 							->setIconPrefixClass('fa fa-')
+							->setAttribute('data-responsive-menu', 'accordion')
 						;
 						echo $oNavBar->render();
 					?>
-					
+				</div>
+				<div class="top-bar-right">
 					<?php 
 						$oLocaleMenu = $oComponents->Languagemenu()
-							->setUlClass('nav navbar-nav navbar-right')
+							->setUlClass('menu')
+							->setSubUlClass('submenu menu')
+							->setSubUlClassLevel1('submenu menu')
+							->setDefaultLiClass('')
+							->setSubLiClass('has-submenu')
+							->setSubLiClassLevel0('')
 							->setIconPrefixClass('flag-icon flag-icon-')
 						;
 						echo $oLocaleMenu->render(); 
 					?>
-				</div> 
-            </div>
+				</div>
+			</div>
+
         </nav>
-        <div class="container-fluid">
+        
+        <br />
+        
+        <div class="row columns">
 			<?php 
 				$oBreadcrumbs = $oTwitterBootstrap->Breadcrumbs('navigation')
 					->setHeader( $this->translate('you are here :') )
@@ -78,35 +93,39 @@
 				;
 				echo $oBreadcrumbs->render(); 
 			?>
-			
-			<?php 
-				$oToolbarNav = $oComponents->Toolbar('toolbarnavigation');
-				if ($oToolbarNav->hasPages()) {
-					$oToolbarNav 
-						->setUlClass('btn-group btn-group-sm')
-						/*->setSubUlClass('')
-						->setSubUlClassLevel1('')
-						->setDefaultLiClass('')
-						->setSubLiClass('')
-						->setSubLiClassLevel0('')
-						->setMinDepth(0)
-						->setMaxDepth(1)*/
-						->setIconPrefixClass('fa fa-')
-					;
-					$toolbarPanel = $oComponents->Panel()
-						->setContent( $oToolbarNav->render() )
-					;
-					echo $toolbarPanel;
-				}
-			?>
+        </div>
+        
+		<?php 
+			$oToolbarNav = $oComponents->Toolbar('toolbarnavigation');
+			if ($oToolbarNav->hasPages()) {
+				$oToolbarNav 
+					->setUlClass('btn-group btn-group-sm')
+					/*->setSubUlClass('')
+					->setSubUlClassLevel1('')
+					->setDefaultLiClass('')
+					->setSubLiClass('')
+					->setSubLiClassLevel0('')
+					->setMinDepth(0)
+					->setMaxDepth(1)*/
+					->setIconPrefixClass('fa fa-')
+				;
+				$toolbarPanel = $oComponents->Panel()
+					->setContent( $oToolbarNav->render() )
+				;
+				?><div class="row columns"><?php echo $toolbarPanel; ?></div><?php
+			}
+		?>
 
+        <div class="row columns">
             <?php
 				echo $this->flashMessenger()->render('error', array('error alert flashmessages'));
 				echo $this->flashMessenger()->render('warning', array('warning alert flashmessages'));
 				echo $this->flashMessenger()->render('success', array('success alert flashmessages'));
 				echo $this->flashMessenger()->render('info', array('info alert flashmessages'));
 			?>
-			
+		</div>
+		
+		<div class="row columns container">
 			<?php
 				$panelLayout = $oComponents->Panel()
 					->setHeader( (isset($this->title) ? $this->title : "") )
