--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -448,7 +448,7 @@ th {
 
 /* line 117, ../../../bower_components/foundation-sites/scss/_global.scss */
 .foundation-mq {
-  font-family: "small=0em&medium=40em&large=64em&xlarge=75em&xxlarge=90em";
+  font-family: "small=0em&medium=40em&large=50em&xlarge=64em&xxlarge=80em&xxxlarge=90em&xxxxlarge=100em";
 }
 
 /* line 121, ../../../bower_components/foundation-sites/scss/_global.scss */
@@ -576,7 +576,7 @@ button {
     padding-right: 0.9375rem;
   }
 }
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 50em) {
   /* line 48, ../../../bower_components/foundation-sites/scss/grid/_classes.scss */
   .row.large-collapse > .column, .row.large-collapse > .columns {
     padding-left: 0;
@@ -1374,7 +1374,7 @@ button {
     margin-right: 0;
   }
 }
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 50em) {
   /* line 92, ../../../bower_components/foundation-sites/scss/grid/_classes.scss */
   .large-1 {
     width: 8.33333%;
@@ -2082,7 +2082,7 @@ p + .stat {
     text-align: justify;
   }
 }
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 50em) {
   /* line 10, ../../../bower_components/foundation-sites/scss/typography/_alignment.scss */
   .large-text-left {
     text-align: left;
@@ -2709,42 +2709,42 @@ select[multiple] {
   }
 }
 
-@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+@media screen and (min-width: 40em) and (max-width: 49.9375em) {
   /* line 81, ../../../bower_components/foundation-sites/scss/components/_visibility.scss */
   .hide-for-medium-only {
     display: none !important;
   }
 }
 
-@media screen and (max-width: 39.9375em), screen and (min-width: 64em) {
+@media screen and (max-width: 39.9375em), screen and (min-width: 50em) {
   /* line 85, ../../../bower_components/foundation-sites/scss/components/_visibility.scss */
   .show-for-medium-only {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 50em) {
   /* line 72, ../../../bower_components/foundation-sites/scss/components/_visibility.scss */
   .hide-for-large {
     display: none !important;
   }
 }
 
-@media screen and (max-width: 63.9375em) {
+@media screen and (max-width: 49.9375em) {
   /* line 76, ../../../bower_components/foundation-sites/scss/components/_visibility.scss */
   .show-for-large {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 64em) and (max-width: 74.9375em) {
+@media screen and (min-width: 50em) and (max-width: 63.9375em) {
   /* line 81, ../../../bower_components/foundation-sites/scss/components/_visibility.scss */
   .hide-for-large-only {
     display: none !important;
   }
 }
 
-@media screen and (max-width: 63.9375em), screen and (min-width: 75em) {
+@media screen and (max-width: 49.9375em), screen and (min-width: 64em) {
   /* line 85, ../../../bower_components/foundation-sites/scss/components/_visibility.scss */
   .show-for-large-only {
     display: none !important;
@@ -3537,7 +3537,7 @@ select[multiple] {
     display: block;
   }
 }
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 50em) {
   /* line 76, ../../../bower_components/foundation-sites/scss/components/_menu.scss */
   .menu.large-horizontal > li {
     display: table-cell;
@@ -3731,7 +3731,7 @@ body {
     margin-right: 250px;
   }
 }
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 50em) {
   /* line 170, ../../../bower_components/foundation-sites/scss/components/_off-canvas.scss */
   .position-left.reveal-for-large {
     left: 0;
@@ -4404,7 +4404,7 @@ tbody td {
   padding: 0.5rem 0.625rem 0.625rem;
 }
 
-@media screen and (max-width: 63.9375em) {
+@media screen and (max-width: 49.9375em) {
   /* line 174, ../../../bower_components/foundation-sites/scss/components/_table.scss */
   table.stack thead {
     display: none;
@@ -4717,37 +4717,6 @@ table.hover tr:nth-of-type(even):hover {
 /* line 44, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
 .top-bar input.button {
   width: auto;
-}
-
-/* line 52, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
-.stacked-for-small .top-bar-right {
-  width: 100%;
-}
-/* line 55, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
-.stacked-for-small .top-bar-left {
-  width: 100%;
-}
-
-@media screen and (max-width: 63.9375em) {
-  /* line 52, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
-  .stacked-for-medium .top-bar-right {
-    width: 100%;
-  }
-  /* line 55, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
-  .stacked-for-medium .top-bar-left {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 74.9375em) {
-  /* line 52, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
-  .stacked-for-large .top-bar-right {
-    width: 100%;
-  }
-  /* line 55, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
-  .stacked-for-large .top-bar-left {
-    width: 100%;
-  }
 }
 
 /* line 52, ../../../bower_components/foundation-sites/scss/components/_top-bar.scss */
