update paths in layout

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -40,7 +40,7 @@
 		?>
 		<?php 
         	$this->headScript()
-        		->appendFile($this->basePath($themePath . 'js/vendor/modernizr.js'))
+        		->appendFile($this->basePath($themePath . 'js/modernizr.js'))
 				->appendFile($this->basePath($themePath . 'js/respond.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',))
 				->appendFile($this->basePath($themePath . 'js/jquery.js'))
 				//->appendFile($this->basePath($themePath . 'js/vendor/fastclick.js'))
