--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -25,7 +25,7 @@
         			//'href' => '/'.$oTwitterBootstrap->AppFavicon()
      			))
 				->appendStylesheet($this->basePath($themePath . 'css/foundation.min.css'))
-			    ->appendStylesheet('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
+			    ->appendStylesheet('//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
 				->appendStylesheet('//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css')
 				->appendStylesheet($this->basePath($themePath . 'js/datatables/css/dataTables.foundation.min.css'))
 				->appendStylesheet($this->basePath($themePath . 'css/flag-icon-css/flag-icon.min.css'))
