update css, js, assets

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -29,7 +29,8 @@
 				->appendStylesheet('//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css')
 				->appendStylesheet($this->basePath($themePath . 'js/datatables/css/dataTables.foundation.min.css'))
 				->appendStylesheet($this->basePath($themePath . 'css/flag-icon-css/flag-icon.min.css'))
-				->appendStylesheet($this->basePath($themePath . 'css/app.css'))
+				
+				->appendStylesheet($this->basePath('application-assets/dist/myapplication.min.css'))
         	;
             $cssfiles = $oTwitterBootstrap->Config()->get('app')->get('css');
             if (is_array($cssfiles) || ($cssfiles instanceof \Zend\Config\Config)) foreach ($cssfiles as $key => $file) {
@@ -66,7 +67,8 @@
 				->appendFile($this->basePath($themePath . 'js/foundation.min.js'))
 				->appendFile($this->basePath($themePath . 'js/datatables/js/jquery.dataTables.min.js'))
 				->appendFile($this->basePath($themePath . 'js/datatables/js/dataTables.foundation.min.js'))
-				->appendFile($this->basePath($themePath . 'js/app.js'))
+				
+				->appendFile($this->basePath('application-assets/dist/myapplication.min.js'))
 			;
 			$jsfiles = $oTwitterBootstrap->Config()->get('app')->get('js');
 			if (is_array($jsfiles) || ($jsfiles instanceof \Zend\Config\Config)) foreach ($jsfiles as $key => $file) {
