--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -1,7 +1,7 @@
 <?php 
 	echo $this->doctype(); 
 	/** @var \UIComponents\View\Helper\Utilities $oUtilities **/
-	$oUtilities = $this->bootstrap();
+	$oUtilities = $this->Utilities();
 	/** @var \UIComponents\View\Helper\Components $oComponents **/
 	$oComponents = $this->Components();
 	/** @var \Admin\Entity\User $user **/
@@ -66,7 +66,7 @@
 					<?php
 						//$oUtilities = $this->bootstrap();
 						//$oBootstrapComponents = $oUtilities->Components();
-						$oNavBar = $oComponents->Navbar('navigation')
+						$oNavBar = $oComponents->Topbar('navigation')
 							->setUlClass('dropdown menu')
 							->setSubUlClass('menu')
 							->setSubUlClassLevel1('menu')
