--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,10 +8,10 @@
  * @package		[MyApplication]
  * @package		BB's Zend Framework 2 Components
  * @package		myApplication client script
- * @author		Björn Bartels <development@bjoernbartels.earth>
+ * @author		Björn Bartels <coding@bjoernbartels.earth>
  * @link		https://gitlab.bjoernbartels.earth/groups/themes
  * @license		http://www.apache.org/licenses/LICENSE-2.0 Apache License, Version 2.0
- * @copyright	copyright (c) 2016 Björn Bartels <development@bjoernbartels.earth>
+ * @copyright	copyright (c) 2016 Björn Bartels <coding@bjoernbartels.earth>
  */
 
 /* @group MyApplication styles */
